# ezdgn

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/ezdgn-core/: Cargo.toml
crates/ezdgn-core/src/: common.rs  entities.rs  error.rs  format.rs  lib.rs  linkage.rs  numbers.rs  options.rs  record.rs  settings.rs  v8.rs  writer.rs
crates/ezdgn-core/src/io/: cursor.rs  mod.rs
crates/ezdgn-core/tests/: v7_records.rs
crates/ezdgn-python/: Cargo.toml
crates/ezdgn-python/src/: lib.rs
src/ezdgn/: __init__.py  __main__.py  _core.pyi  entities.py  metadata.py  plotting.py  raw.py  v8.py  writer.py
src/ezdgn/_data/: README.md
tests/data/dgn/: README.md  SHA256SUMS
tests/python/: test_entities.py  test_metadata.py  test_package.py  test_plotting.py  test_raw_records.py  test_writer.py
