[workspace]
members = [
    "crates/ezdgn-core",
    "crates/ezdgn-python",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.83"
authors = ["neka-nat <nekanat.stock@gmail.com>"]
description = "Native V7 DGN reader/writer core and Python bindings"
repository = "https://github.com/monozukuri-ai/ezdgn"
license = "MIT"

[workspace.dependencies]
pyo3 = { version = "0.29.0", features = ["abi3-py310"] }
