[package]
name = "ezdgn-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
exclude = ["tests/**"]

[lib]
name = "ezdgn_core"

[dependencies]
cfb = "0.14"
thiserror = "2.0"
# cfb accepts every uuid 1.x release; uuid 1.21 raised its MSRV to 1.85.
# Keep this workspace's declared Rust 1.83 floor effective.
uuid = ">=1, <1.21"
