[package]
name = "ezdgn-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
ezdgn-core = { path = "../ezdgn-core" }
pyo3.workspace = true
